# markdown-library

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  english_interview_final.md
.github/workflows/: release.yml
scripts/: make_appimage.sh
src/: app.rs  attachments.rs  debug_log.rs  editor_actions.rs  export.rs  find_replace.rs  highlight.rs  main.rs  note.rs  settings.rs  storage.rs  theme.rs  toc.rs  voice.rs  watcher.rs  wikilinks.rs
src/asr/: mod.rs
src/search/: index.rs  matcher.rs  mod.rs  normalize.rs  score.rs  synonym.rs  transcript_processor.rs
src/ui/: app.rs  constants.rs  mod.rs  types.rs  utils.rs
src/ui/components/: find_bar.rs  menu_bar.rs  mod.rs  status_bar.rs  toolbar.rs
src/ui/editor/: editor.rs  mod.rs  preview.rs
src/ui/panels/: backlinks.rs  mod.rs  sidebar.rs  toc.rs
src/ui/windows/: mod.rs  quick_switcher.rs  settings.rs
