[package]
name = "markdown-library"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "markdown-library"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
egui_commonmark = { version = "0.18", features = ["pulldown_cmark"] }
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rfd = "0.15"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
arboard = { version = "3", features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png"] }
notify = "5.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
cpal = "0.15"
hmac = "0.12"
sha1 = "0.10"
md-5 = "0.10"
base64 = "0.22"
url = "2"
futures-util = "0.3"
regex = "1"
rust-stemmers = "1"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.4"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
